# wei-assistant-gpu

./: Cargo.toml  README.md  suppliers.csv  test.csv  wei-assistant.db
docs/: development_guide.md  setup_guide.md  user_guide.md
scripts/: rpd.txt  task-complexity-report.json
src/: main.rs
tests/: cli_integration.rs  performance_test.rs
