[package]
name = "wei-assistant-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
tempfile = "3.19.1"
csv = "1.3.1"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3"
tempfile = "3.19.1"
